# dkn-l2-oracle

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: gpt.dev.yaml
example/: balance.rs  block.rs
examples/: balance.rs
misc/: arweave.js  parse.js
src/: cli.rs  lib.rs  main.rs  node.rs
src/cli/: mod.rs  parsers.rs
src/cli/commands/: coordinator.rs  mod.rs  registry.rs  token.rs
src/commands/: coordinator.rs  mod.rs  registry.rs  token.rs
src/compute/: handler.rs  handlers.rs  llm.rs  mod.rs  nonce.rs
src/compute/generation/: execute.rs  handler.rs  request.rs  workflow.rs
src/compute/generation/postprocess/: identity.rs  mod.rs  swan.rs
src/compute/handlers/: generation.rs  mod.rs  validation.rs
src/compute/validation/: execute.rs  handler.rs  workflow.rs
src/compute/workflows/: chat.rs  common.rs  executor.rs  generation.rs  input.rs  mod.rs  models.rs  postprocess.rs  preset.rs  presets.rs  request.rs  validation.rs
src/compute/workflows/generation/: execute.rs  handler.rs  mod.rs  request.rs  workflow.rs
src/compute/workflows/postprocess/: identity.rs  mod.rs  swan.rs
src/compute/workflows/presets/: chat.json  generation.json  mod.rs  validation.json
src/compute/workflows/providers/: mod.rs  ollama.rs  openai.rs
src/compute/workflows/requests/: chat.rs  mod.rs
src/compute/workflows/validation/: execute.rs  handler.rs  mod.rs  workflow.rs
src/configurations/: mod.rs
src/contracts/: addresses.rs  balance.rs  errors.rs  interfaces.rs  mod.rs
src/contracts/abi/: LLMOracleCoordinator.json  LLMOracleRegistry.json
src/data/: arweave.rs  mod.rs  traits.rs
src/node/: anvil.rs  coordinator.rs  mod.rs  registry.rs  token.rs
src/storage/: arweave.rs  mod.rs  traits.rs
tests/: abi_encode_test.rs  generation_test.rs  nonce_test.rs  oracle_test.rs  request_test.rs  swan_test.rs  token_test.rs  weth_test.rs
tests/contracts/: TestNonce.sol  TestSolidityPacked.sol
