[package]
name = "dkn-oracle"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
# core
alloy = { version = "0.2.1", features = ["full", "node-bindings"] }
alloy-chains = "0.1.24"
tokio = { version = "1.39.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
lazy_static = "1.5.0"

# compute
# TODO: ollama-workflows, ollama-rs

# errors & logging
color-eyre = "0.6.3"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"

# hex, serde
hex = "0.4.3"
hex-literal = "0.4.1"
serde = "1.0.204"
serde_json = "1.0.122"
clap = { version = "4.5.13", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
reqwest = "0.12.5"
async-trait = "0.1.81"
bytes = "1.7.1"

[[example]]
name = "balance"
path = 'example/balance.rs'
