[package]
name = "dkn-oracle"
description = "Dria Knowledge Network Oracle Node"
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[features]
anvil = ["alloy/node-bindings"]

[dependencies]
# core
alloy = { version = "0.2.1", features = ["full", "node-bindings"] }
alloy-chains = "0.1.24"
tokio = { version = "1.39.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
lazy_static = "1.5.0"

# workflows
dkn-workflows = { git = "https://github.com/firstbatchxyz/dkn-compute-node" }

# errors & logging & env
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
dotenvy = "0.15.7"

# utils
futures-util = "0.3.30"
async-trait = "0.1.81"
bytes = "1.7.1"
rand = "0.8.5"
reqwest = "0.12.5"

# b64, hex, serde
base64 = "0.22.1"
hex = "0.4.3"
hex-literal = "0.4.1"
serde = "1.0.204"
serde_json = "1.0.122"

# cli
clap = { version = "4.5.13", features = ["derive", "env"] }

# arweave uploader
# there are many unused stuff here, but everything breaks if you use the minimal set
# because Bundlr SDK is not maintained at all
bundlr-sdk = { version = "0.5.0" }
